<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingHorizontal="40dp"
    android:paddingBottom="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="@dimen/title_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"/>


    <Button
        style="@style/BaseButtonStyle"
        android:id="@+id/constraintLayoutBtn"
        android:text="@string/constraint_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutBtn"/>

    <Button
        style="@style/BaseButtonStyle"
        android:id="@+id/linearLayoutBtn"
        android:text="@string/linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayoutBtn"
        app:layout_constraintBottom_toTopOf="@+id/frameLayoutBtn"/>

    <Button
        style="@style/BaseButtonStyle"
        android:id="@+id/frameLayoutBtn"
        android:text="@string/frame_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutBtn"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayoutBtn"/>

    <Button
        style="@style/BaseButtonStyle"
        android:id="@+id/relativeLayoutBtn"
        android:text="@string/relative_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLayoutBtn"
        app:layout_constraintBottom_toTopOf="@+id/motionLayoutBtn"/>

    <Button
        style="@style/BaseButtonStyle"
        android:id="@+id/motionLayoutBtn"
        android:text="@string/motion_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relativeLayoutBtn"
        app:layout_constraintBottom_toTopOf="@+id/gridLayoutBtn"/>

    <Button
        style="@style/BaseButtonStyle"
        android:id="@+id/gridLayoutBtn"
        android:text="@string/grid_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/motionLayoutBtn"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>