<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="40dp"
    android:orientation="vertical"
    tools:context=".LinearLayoutActivity">

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/app_name"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="500dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/linearlayout_info"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:justificationMode="inter_word"
        tools:ignore="UnusedAttribute,VisualLintLongText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horizontal_linearlayout"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        tools:ignore="VisualLintLongText" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            tools:ignore="SpeakableTextPresentCheck"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:layout_marginHorizontal="10dp"
            tools:ignore="SpeakableTextPresentCheck"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            tools:ignore="SpeakableTextPresentCheck"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vertical_linearlayout"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        tools:ignore="VisualLintLongText"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="10dp">

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                tools:ignore="SpeakableTextPresentCheck"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:layout_marginVertical="20dp"
                tools:ignore="SpeakableTextPresentCheck"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                tools:ignore="SpeakableTextPresentCheck"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                tools:ignore="SpeakableTextPresentCheck"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:layout_marginVertical="20dp"
                tools:ignore="SpeakableTextPresentCheck"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                tools:ignore="SpeakableTextPresentCheck"/>

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <TextView
        android:layout_gravity="center_horizontal"
        android:maxWidth="500dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linearlayout_info2"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:justificationMode="inter_word"
        tools:ignore="UnusedAttribute,VisualLintLongText" />

</LinearLayout>