<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="40dp"
    tools:context=".RelativeLayoutActivity">

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/app_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:maxWidth="500dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/relativelayout_info"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/backBtn"
        tools:ignore="VisualLintLongText" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/btn2"
        android:layout_toStartOf="@id/btn2"
        android:backgroundTint="@color/orange"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/orange"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:layout_alignTop="@id/btn2"
        android:layout_toEndOf="@id/btn2"
        tools:ignore="SpeakableTextPresentCheck"/>


    <Button
        android:id="@+id/btn4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:layout_toStartOf="@id/btn2"
        android:layout_below="@id/btn1"
        tools:ignore="SpeakableTextPresentCheck"/>

    <Button
        android:id="@+id/btn5"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn4"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/orange"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:layout_below="@id/btn3"
        android:layout_toEndOf="@id/btn2"
        tools:ignore="SpeakableTextPresentCheck"/>

    <Button
        android:id="@+id/btn7"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn5"
        android:layout_toEndOf="@id/btn2"
        android:backgroundTint="@color/orange"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:maxWidth="500dp"
        android:layout_height="wrap_content"
        android:text="@string/relativelayout_info2"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@id/btn7"
        tools:ignore="VisualLintLongText" />

</RelativeLayout>