<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="40dp"
    tools:context=".ConstraintLayoutActivity">

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/constraintlayout_info"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        tools:ignore="VisualLintLongText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/constraintlayout_short_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.9"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintStart_toEndOf="@id/btn1"
        android:backgroundTint="@color/blue"
        tools:ignore="SpeakableTextPresentCheck"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn1"
        app:layout_constraintStart_toEndOf="@id/btn1"
        android:backgroundTint="@color/yellow"
        tools:ignore="SpeakableTextPresentCheck"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintEnd_toStartOf="@id/btn1"
        android:backgroundTint="@color/green"
        tools:ignore="SpeakableTextPresentCheck"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn1"
        app:layout_constraintEnd_toStartOf="@id/btn1"
        android:backgroundTint="@color/black"
        tools:ignore="SpeakableTextPresentCheck"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintStart_toStartOf="@id/btn1"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/yellow"
        tools:ignore="SpeakableTextPresentCheck"/>


    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="60dp"
        android:layout_marginStart="30dp"
        android:backgroundTint="@color/green"
        app:layout_constraintStart_toEndOf="@id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/btn1"
        app:layout_constraintBottom_toTopOf="@id/btn3"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btn1"
        app:layout_constraintTop_toTopOf="@id/btn1"
        app:layout_constraintBottom_toBottomOf="@id/btn1"
        android:layout_marginStart="50dp"
        android:backgroundTint="@color/orange"
        tools:ignore="SpeakableTextPresentCheck"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        app:layout_constraintEnd_toStartOf="@id/btn8"
        app:layout_constraintTop_toTopOf="@id/btn8"
        tools:ignore="SpeakableTextPresentCheck"/>

    <Button
        android:id="@+id/btn3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        app:layout_constraintStart_toStartOf="@id/btn8"
        app:layout_constraintEnd_toEndOf="@id/btn8"
        app:layout_constraintBottom_toTopOf="@id/btn8"
        app:layout_constraintTop_toBottomOf="@id/btn6"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toTopOf="@id/btn3"
        tools:ignore="SpeakableTextPresentCheck"/>


    <Button
        android:id="@+id/btn8"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn3"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@id/btn3"
        tools:ignore="SpeakableTextPresentCheck"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@id/btn5"
        tools:ignore="SpeakableTextPresentCheck"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        app:layout_constraintStart_toStartOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@id/btn5"
        tools:ignore="SpeakableTextPresentCheck"/>

</androidx.constraintlayout.widget.ConstraintLayout>